RESOLVED FIXED228920
[GLIB][cairo] Setting "overflow: clip" does not always clip overflow.
https://bugs.webkit.org/show_bug.cgi?id=228920
Summary [GLIB][cairo] Setting "overflow: clip" does not always clip overflow.
Arcady Goldmints-Orlov
Reported 2021-08-09 12:54:12 PDT
Created attachment 435200 [details] Screenshot of failling test The tests imported/w3c/web-platform-tests/css/css-overflow/clip-006.html and imported/w3c/web-platform-tests/css/css-overflow/clip-007.html fail on both GTK and WPE, with the resulting images showing no green square when there is supposed to be a green square. Running the test directly from http://wpt.live does show a green square but the div containing the green square div has scroll bars which it is not supposed to. Attached is a scrrenshot from the wpt.live test.
Attachments
Screenshot of failling test (48.84 KB, image/png)
2021-08-09 12:54 PDT, Arcady Goldmints-Orlov
no flags
gardening patch (1.68 KB, patch)
2021-08-09 13:02 PDT, Arcady Goldmints-Orlov
no flags
Arcady Goldmints-Orlov
Comment 1 2021-08-09 13:02:06 PDT
Created attachment 435201 [details] gardening patch
Rob Buis
Comment 2 2021-08-09 13:22:59 PDT
The problem IIRC was that the underlying rendering engine (cairo?) react strange to a clip path with large double minimum/maximum dimension, instead it seems to have some smaller min/max values. I don't think it is unreasonable to use double minimum/maximum so I think some clamping is missing in lower layers.
EWS
Comment 3 2021-08-09 13:45:11 PDT
Committed r280793 (240371@main): <https://commits.webkit.org/240371@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 435201 [details].
Simon Fraser (smfr)
Comment 4 2021-08-09 13:49:28 PDT
Underlying bug is not fixed.
Radar WebKit Bug Importer
Comment 5 2021-08-09 13:50:39 PDT
Fujii Hironori
Comment 6 2023-05-10 13:01:00 PDT
*** Bug 248693 has been marked as a duplicate of this bug. ***
Fujii Hironori
Comment 7 2023-05-10 13:01:18 PDT
*** Bug 256139 has been marked as a duplicate of this bug. ***
Fujii Hironori
Comment 8 2023-05-10 13:22:49 PDT
EWS
Comment 9 2023-05-10 19:28:59 PDT
Committed 263943@main (902804f38b45): <https://commits.webkit.org/263943@main> Reviewed commits have been landed. Closing PR #13715 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.