Cherry-pick 263943@main (902804f38b45). https://bugs.webkit.org/show_bug.cgi?id=228920

[cairo] Clamp the clip rect expanded to the infinity
    https://bugs.webkit.org/show_bug.cgi?id=228920

    Reviewed by Simon Fraser.

    If overflow-x is clip, RenderBox::overflowClipRect expands the clip
    rect in Y axis by using LayoutRect::expandToInfiniteY. Same for
    overflow-y. It uses values of LayoutUnit::nearlyMax. LayoutUnit is
    using 26.6 fixed point numbers while cairo is internally using 24.8
    fixed point. Such clip rects were causing overflow.

    * LayoutTests/platform/glib/TestExpectations:
    * Source/WebCore/platform/graphics/cairo/CairoOperations.cpp:
    (WebCore::Cairo::clampClipRect): Added.
    (WebCore::Cairo::clip): Clamp the passed clip rect.

    Canonical link: https://commits.webkit.org/263943@main